--- a/算法基础课/数据结构.md
+++ b/算法基础课/数据结构.md
@@ -141,6 +141,112 @@ int main()
 
 ## 二、双链表
 
+### 数组模拟双链表
+
+#### 题目描述
+
+实现一个双链表，双链表初始为空，支持 55 种操作：
+
+1. 在最左侧插入一个数；
+2. 在最右侧插入一个数；
+3. 将第 k 个插入的数删除；
+4. 在第 k 个插入的数左侧插入一个数；
+5. 在第 k 个插入的数右侧插入一个数
+
+现在要对该链表进行 M 次操作，进行完所有操作后，从左到右输出整个链表。
+
+**注意**:题目中第 k 个插入的数并不是指当前链表的第 k 个数。例如操作过程中一共插入了 n 个数，则按照插入的时间顺序，这 n 个数依次为：第 1 个插入的数，第 2 个插入的数，… 第 n 个插入的数。
+
+#### 输入格式
+
+第一行包含整数 M，表示操作次数。
+
+接下来 M 行，每行包含一个操作命令，操作命令可能为以下几种：
+
+1. `L x`，表示在链表的最左端插入数 x。
+2. `R x`，表示在链表的最右端插入数 x。
+3. `D k`，表示将第 k 个插入的数删除。
+4. `IL k x`，表示在第 k 个插入的数左侧插入一个数。
+5. `IR k x`，表示在第 k 个插入的数右侧插入一个数。
+
+#### 代码
+
+看懂这个代码必须画图去理解
+
+```c++
+#include <iostream>
+
+using namespace std;
+
+const int N = 100010;
+
+int m;
+int h[N], e[N], l[N], r[N], idx;
+
+void init()
+{
+    // 0表示第一个点，1表示最后一个点
+    r[0] = 1, l[1] = 0;
+    idx = 2;
+}
+
+//在第k个点的右侧插入
+void add(int k, int x) 
+{
+    e[idx] = x;
+    l[idx] = k;
+    r[idx] = r[k];
+    l[r[k]] = idx;
+    r[k] = idx;
+    idx ++;
+}
+
+void remove(int k)
+{
+    r[l[k]] = r[k];
+    l[r[k]] = l[k];
+}
+
+int main()
+{
+    cin >> m;
+    
+    init();
+    
+    string op;
+    int k, x;
+    
+    while(m --) 
+    {
+        cin >> op;
+        if (op == "L") 
+        {
+            cin >> x;
+            add(0, x);
+        } else if (op == "R") {
+            cin >> x;
+            add(l[1], x);
+        } else if (op == "D") {
+            cin >> k;
+            remove(k + 1);
+        } else if(op == "IL") {
+            cin >> k >> x;
+            add(l[k + 1], x);
+        } else {
+            cin >> k >> x;
+            add(k + 1, x);
+        }
+    }
+    
+    for (int i = r[0]; i != 1; i = r[i]) cout << e[i] << " ";
+    
+    return 0;
+    
+}
+```
+
+
+
 ## 三、栈
 
 ### 数组模拟栈
@@ -216,9 +322,47 @@ int main()
 }
 ```
 
-
-
 ## 四、队列
+
+### 数组模拟队列
+
+#### 题目描述
+
+实现一个队列，队列初始为空，支持四种操作：
+
+1. `push x` – 向队尾插入一个数 x；
+2. `pop` – 从队头弹出一个数；
+3. `empty` – 判断队列是否为空；
+4. `query` – 查询队头元素。
+
+现在要对队列进行 M 个操作，其中的每个操作 3 和操作 4 都要输出相应的结果。
+
+#### 输入样例：
+
+```
+10
+push 6
+empty
+query
+pop
+empty
+push 3
+push 4
+pop
+query
+push 6
+```
+
+#### 输出样例：
+
+```
+NO
+6
+YES
+4
+```
+
+
 
 ## 五、单调栈
 
