添加了Go语言基础方法一章的小部分笔记

--- a/Go学习笔记/语法篇.md
+++ b/Go学习笔记/语法篇.md
@@ -794,3 +794,169 @@ func lookup(key string) int {
 }
 ```
 
+### 5.Panic异常
+
+### 6.Recover捕获异常
+
+## 九、方法
+
+### 1.方法
+
+#### 方法声明
+
+因为Go没有类，所以方法都是声明到结构体上
+
+```go
+package geometry
+
+import "math"
+
+type Point struct{ X, Y float64 }
+
+// 传入一个Point类型的参数，谁都可以调用
+func Distance(p, q Point) float64 {
+    return math.Hypot(q.X-p.X, q.Y-p.Y)
+}
+
+// 这个方法只属于Point这个结构体
+func (p Point) Distance(q Point) float64 {
+    return math.Hypot(q.X-p.X, q.Y-p.Y)
+}
+```
+
+#### 方法调用
+
+上面的代码里那个附加的参数`p`，叫做方法的接收器（receiver），早期的面向对象语言留下的遗产将调用一个方法称为“向一个对象发送消息”。
+
+在Go语言中，我们并不会像其它语言那样用this或者self作为接收器；我们可以任意的选择接收器的名字。由于接收器的名字经常会被使用到，所以保持其在方法间传递时的一致性和简短性是不错的主意。这里的建议是可以使用其类型的第一个字母，比如这里使用了Point的首字母p。
+
+在方法调用过程中，接收器参数一般会在方法名之前出现。这和方法声明是一样的，都是接收器参数在方法名字之前。下面是例子：
+
+```Go
+p := Point{1, 2}
+q := Point{4, 6}
+fmt.Println(Distance(p, q)) // "5", 函数 call
+fmt.Println(p.Distance(q))  // "5", 方法 call
+```
+
+### 2.基于指针对象的方法
+
+上面那种方法的声明方式只是说明这个方法属于Point这个类型，可以调用他的内置参数，但是不可以修改参数的值，如果我们想通过方法去修改结构体中参数的值，我们就需要用到指针，用指针可以修改值，并且耗费资源不多
+
+```go
+func (p *Point) ScaleBy(factor float64) {
+   p.X *= factor
+   p.Y *= factor
+}
+```
+
+他属于`*Point`这个类型的我们调用的时候就需要通过对象指针去调用
+
+```go
+func main() {
+   r := Point{1, 2}
+
+    (&r).ScaleBy(2)
+    (&r).Distance(Point{2, 1})
+   fmt.Println(&r)  // 输出 {1， 2}
+    
+    // 或者
+    r := &Point{1, 2}
+	
+	r.ScaleBy(2)
+	r.Distance(Point{2, 1})
+     fmt.Println(*r) // 输出 {1， 2}
+}
+
+```
+
+上面第一种方法比较笨。幸运的是，go语言本身在这种地方会帮到我们。如果接收器p是一个Point类型的变量，并且其方法需要一个Point指针作为接收器，我们可以用下面这种简短的写法：
+
+```go
+r.ScaleBy(2)
+```
+
+编译器会隐式地帮我们用&p去调用ScaleBy这个方法。这种简写方法只适用于**变量**，包括struct里的字段比如p.X，以及array和slice内的元素比如perim[0]。我们不能通过一个无法取到地址的接收器来调用指针方法，比如临时变量的内存地址就无法获取得到：
+
+```go
+Point{1, 2}.ScaleBy(2) // Point{1, 2}不是变量所以不能通过简单的方法调用
+```
+
+只能这样写
+
+```go
+(&Point{1, 2}).ScaleBy(2)
+```
+
+#### 小结
+
+> * 不管你的method的receiver是`指针类型`还是`非指针类型`，都是`可以通过指针/非指针类型进行调用`的，编译器会帮你做类型转换。
+>
+> * 在声明一个method的receiver该是指针还是非指针类型时，你需要考虑两方面的因素，
+> 	* 第一方面是这个对象本身是不是特别大，如果声明为非指针变量时，调用会产生一次拷贝；
+> 	* 第二方面是如果你用指针类型作为receiver(接受对象)，那么你一定要注意，这种指针类型指向的始终是一块内存地址，就算你对其进行了拷贝。熟悉C或者C++的人这里应该很快能明白。
+
+#### Nil也是一个合法的接收器类型
+
+就像一些函数允许nil指针作为参数一样，方法理论上也可以用nil指针作为其接收器，尤其当nil对于对象来说是合法的零值时，比如map或者slice。在下面的简单int链表的例子里，nil代表的是空链表
+
+```go
+type IntList struct {
+    Value int
+    Tail  *IntList
+}
+// Sum returns the sum of the list elements.
+// 当list为空的之后说明这个链表到尾了
+func (list *IntList) Sum() int {
+    if list == nil {
+        return 0
+    }
+    return list.Value + list.Tail.Sum()
+}
+```
+
+### 3. 通过嵌入结构体来扩展类型
+
+Go提供了一种方法，可以在结构体中声明一个以声明好的结构体
+
+```go
+import "image/color"
+
+type Point struct{ X, Y float64 }
+
+type ColoredPoint struct {
+    Point
+    Color color.RGBA
+}
+```
+
+我们也可以直接通过`ColoredPoint`调用Point中的两个字段
+
+```go
+var cp ColoredPoint
+cp.X = 1
+fmt.Println(cp.Point.X) // "1"
+cp.Point.Y = 2
+fmt.Println(cp.Y) // "2"
+```
+
+同样的，我们也可以调用`Point中的方法`，即使这个方法在`ColoredPoint`中没有声明
+
+```go
+red := color.RGBA{255, 0, 0, 255}
+blue := color.RGBA{0, 0, 255, 255}
+var p = ColoredPoint{Point{1, 1}, red}
+var q = ColoredPoint{Point{5, 4}, blue}
+fmt.Println(p.Distance(q.Point)) // "5"
+p.ScaleBy(2)
+q.ScaleBy(2)
+fmt.Println(p.Distance(q.Point)) // "10"
+```
+
+看到这里是不是感觉这比较像继承，
+
+但这是错误的理解。请注意上面例子中对Distance方法的调用。Distance有一个参数是Point类型，但q并不是一个Point类，所以尽管q有着Point这个内嵌类型，我们也必须要显式地选择它。尝试直接传q的话你会看到下面这样的错误：
+
+```go
+p.Distance(q) // compile error: cannot use q (ColoredPoint) as Point
+```
