--- a/Go学习笔记/语法/语法篇.md
+++ b/Go学习笔记/语法/语法篇.md
@@ -796,7 +796,17 @@ func lookup(key string) int {
 
 ### 5.Panic异常
 
+Go的类型系统会在编译时捕获很多错误，但有些错误只能在运行时检查，如数组访问越界、空指针引用等。这些运行时错误会引起painc异常。
+
+panic异常在发生之后程序会终端运行，并且立即执行Defer机制，之后程序就会崩溃
+
+因为panic会引起程序崩溃，因此平常我们都是用Go的`错误机制`，尽量少用panic机制，panic一般用于严重的错误
+
+任何可以被预料到的错误都应该使用错误机制，而不是panic机制
+
 ### 6.Recover捕获异常
+
+用于在panic之前做一些操作
 
 ## 九、方法
 
@@ -960,3 +970,170 @@ fmt.Println(p.Distance(q.Point)) // "10"
 ```go
 p.Distance(q) // compile error: cannot use q (ColoredPoint) as Point
 ```
+
+### 4.封装
+
+Go的封装和Java不一样，Go没有public和private这些关键字，所以Go的封装是依靠首字母的大小写去实现的，`首字母大写则默认到处即public`，`首字母小写则默认不导出即private`
+
+#### 封装的实现步骤
+
+* 将结构体、字段(属性)的首字母小写(不能导出了，其它包不能使用，类似 private)。
+
+* 给结构体所在包提供一个工厂模式的函数，首字母大写。类似一个构造函数。
+
+* 提供一个首字母大写的 Set 方法(类似其它语言的 public)，用于对属性判断并赋值。
+
+我们知道OOP编程，三大核心就是封装，继承，多态。至此我们学了封装，为了完成OOP还需要接口去配合，下一章我们将学习到接口
+
+## 十、接口
+
+### 1.接口是一种类型，一种特殊的类型
+
+### 2.接口的定义
+
+接口关键字`interface`
+
+在接口中定义一个方法，只要实现这个方法的结构体都可以被称作为这个接口的类型
+
+```go
+package io
+type Reader interface {
+    Read(p []byte) (n int, err error)
+}
+type Closer interface {
+    Close() error
+}
+```
+
+比如上面的例子，只要实现了io包里的Read方法的结构体都可以被称之为Reader，并且接口只关注声明，不关注实现，
+
+### 3.接口实现多态
+
+如果一个结构体类型实现了一个接口内的全部方法，那么就称这个结构体类型实现了这个接口
+
+并且可以转型
+
+```go
+type sayer interface {
+	say()
+}
+
+type person struct {
+}
+
+func (p person) say() {
+	fmt.Println("啊啊啊")
+}
+
+func main() {
+	p := person{}
+	var s sayer
+	s = p
+	s.say()
+}
+```
+
+在这个方法中定义了一个sayer的接口，并且在person这个类中实现了这个接口，现在我们在下面声明一个`person类型的变量的p`，`sayer类型的变量s`下面可以把s转型为person类型
+
+### 4.空接口
+
+因为是空接口所以我们不需要特别的声明名字
+
+因为是空接口，所以其中没有认可方法，因此我们可以认为所有的类型都实现了空接口，那么我们就找到了一种方法去类比Java中的T(泛型)，当我们不能确定数据类型的时候就可以用空接口
+
+### 5.sort.interface
+
+一个内置的排序算法需要知道三个东西：序列的长度，表示两个元素比较的结果，一种交换两个元素的方式；这就是sort.Interface的三个方法：
+
+```go
+package sort
+
+type Interface interface {
+    Len() int
+    Less(i, j int) bool // i, j are indices of sequence elements
+    Swap(i, j int)
+}
+```
+
+这个是sort包里面的Sort函数
+
+它传进来的参数是一个Interface，因此我们传进来的参数就必须实现Interface中的所有方法
+
+```go
+func Sort(data Interface) {
+   n := data.Len()
+   if n <= 1 {
+      return
+   }
+   limit := bits.Len(uint(n))
+   pdqsort(data, 0, n, limit)
+}
+```
+
+在Go的sort包中帮我们实现了三个基础类型实现Interface接口的方法
+
+分别是
+
+* int  方法(sort.IntSlice(数组名字))
+* float64   方法(sort.Float64Slice(数组名字))
+* string   方法(sort.StringSlice(数组名字))
+
+具体使用方法
+
+```go
+func main() {
+    a := []int{1,3,5,2,35}
+	// 正序
+	sort.Ints(a)
+	fmt.Println("正序sort.Ints()：a=",a) //正序sort.Sort()：a= [1 2 3 5 35]
+	sort.Sort(sort.IntSlice(a))
+	fmt.Println("正序sort.Sort()：a=",a) //正序sort.Sort()：a= [1 2 3 5 35]
+}
+```
+
+如果有其他类型的Slice需要排序，那么我们就需要给这个类型实现三个基础的方法，然后传入这个类型的变量的名字
+
+* Len() int
+* Less(i, j int) bool 
+* Swap(i, j int)
+
+在sort包中有这样一个函数Silce
+
+他会帮我们实现Swap和Len这两个方法，Swap通过反射去实现，我们只需要传入Less比较函数就可以了
+
+```go
+func Slice(x any, less func(i, j int) bool) {
+   rv := reflectValueOf(x)
+   swap := reflectSwapper(x)
+   length := rv.Len()
+   limit := bits.Len(uint(length))
+   pdqsort_func(lessSwap{less, swap}, 0, length, limit)
+}
+```
+
+这是一个User类型进行排序
+
+这个实现了sort中的Slice方法
+
+```go
+type User struct {
+   ID    int
+   Nmae  string
+   Score float64
+}
+
+func main() {
+   users := []User{
+      {1, "kk", 8},
+      {2, "烟灰", 9},
+      {3, "第三代", 6},
+      {4, "阿强", 2},
+   }
+
+   sort.Slice(users, func(i, j int) bool {
+      return users[i].Score < users[j].Score
+   })
+   fmt.Println(users) //[{4 阿强 2} {3 第三代 6} {1 kk 8} {2 烟灰 9}]
+}
+```
+
