--- a/算法基础课/基础算法.md
+++ b/算法基础课/基础算法.md
@@ -251,7 +251,7 @@ int main()
 >
 > 即 ==mid - i + 1==最后的 ==res== 就是答案
 
-![逆序对的图片讲解](C:\Users\wonderful\AppData\Roaming\Typora\typora-user-images\image-20221102094527521.png)
+![逆序对的图片讲解](.\images\image-20221102094527521.png)
 
 此时如果`q[j] < q[i]` 说明从==i==开始到mid所有的数都大于 ==q[j]== 所以`res += mid - i + 1`
 
@@ -1023,7 +1023,7 @@ int main()
 
 #### 图解
 
-<img src="C:\Users\wonderful\AppData\Roaming\Typora\typora-user-images\image-20221115093311566.png" alt="image-20221115093311566"  />
+<img src=".\images\image-20221115093311566.png" alt="image-20221115093311566"  />
 
 #### 代码：
 
