修改一些图片的路径

--- a/算法基础课/基础算法.md
+++ b/算法基础课/基础算法.md
@@ -251,7 +251,7 @@ int main()
 >
 > 即 ==mid - i + 1==最后的 ==res== 就是答案
 
-![逆序对的图片讲解](.\images\image-20221102094527521.png)
+![逆序对的图片讲解](https://github.com/sunflower10086/Algorithm-Note/blob/master/%E7%AE%97%E6%B3%95%E5%9F%BA%E7%A1%80%E8%AF%BE/images/image-20221102094527521.png?raw=true)
 
 此时如果`q[j] < q[i]` 说明从==i==开始到mid所有的数都大于 ==q[j]== 所以`res += mid - i + 1`
 
@@ -1023,7 +1023,7 @@ int main()
 
 #### 图解
 
-<img src=".\images\image-20221115093311566.png" alt="image-20221115093311566"  />
+<img src="https://github.com/sunflower10086/Algorithm-Note/blob/master/%E7%AE%97%E6%B3%95%E5%9F%BA%E7%A1%80%E8%AF%BE/images/image-20221115093311566.png?raw=true" alt="image-20221115093311566"  />
 
 #### 代码：
 
